Remove HasUserGesture check from from gws metric logger.

Navigations opened in new tabs return false for HasUserGesture,
so we need to remove that check in order to support that case.

BUG=607332

Review-Url: https://codereview.chromium.org/1915123007
Cr-Commit-Position: refs/heads/master@{#390228}

Former-commit-id: fc86df8278e4f3814e391c42fe9d34b3ef34f266